<resources>
    <string name="app_name">mobile_app_hw1</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in">Sign in to access your account</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="next">Next</string>
    <string name="new_member">New Member? </string>
    <string name="register">Register now</string>
    <string name="get_started">Get Started</string>
    <string name="free_account">by creating a free account.</string>
    <string name="name_input">Full name</string>
    <string name="email_valid_hint">Valid email</string>
    <string name="phone_hint">Phone number</string>
    <string name="passwd_strong_hint">Strong Password</string>
    <string name="conditions_checkbox">By checking the box you agree to our</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="conditions">Conditions</string>
    <string name="member">Already a member?</string>
    <string name="login">Login</string>
    <string name="switch_fragment">Switch Fragment</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="titleRecipe">Recipe Title</string>
    <string name="buttonLike">Like</string>
    <string name="buttonShare">Share</string>
</resources>
